# CalFram

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
calfram/: __init__.py  calibration_framework.py  calibrationframework.py  ece.py
calfram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py
